--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,14 +22,13 @@ set(VERSION "0.0.${GIT_COMMIT_COUNT}")
 
 project(airmap
   VERSION "${VERSION}"
-  LANGUAGES C CXX)
-
+  LANGUAGES C CXX)add_definitions("-D_LIBCPP_ABI_UNSTABLE")
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
-
+add_definitions("-D_LIBCPP_ABI_UNSTABLE")
 option(AIRMAP_ENABLE_NETWORK_TESTS "enable tests requiring network access"       ON)
 option(AIRMAP_ENABLE_GRPC          "Enable libraries/executables requiring gRPC" OFF)
-option(AIRMAP_ENABLE_QT            "Enable libraries/executables requiring Qt5"  OFF)
+option(AIRMAP_ENABLE_QT            "Enable libraries/executables requiring Qt5"  ON)
 
 if (AIRMAP_ENABLE_GRPC)
   add_definitions(-DAIRMAP_ENABLE_GRPC)
