--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,9 @@ set(VERSION "0.0.${GIT_COMMIT_COUNT}")
 
 project(airmap
   VERSION "${VERSION}"
-  LANGUAGES C CXX)add_definitions("-D_LIBCPP_ABI_UNSTABLE")
+  LANGUAGES C CXX)
+
+add_definitions("-D_LIBCPP_ABI_UNSTABLE")
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 add_definitions("-D_LIBCPP_ABI_UNSTABLE")
