--- a/.github/workflows/build-airmap.yml
+++ b/.github/workflows/build-airmap.yml
@@ -25,6 +25,7 @@ jobs:
           ndk=$(tools/android/download-ndk.sh android-ndk-r21d /tmp)
           mkdir build
           cd build
+          export Qt5_DIR=/usr/lib/x86_64-linux-gnu/cmake/Qt5
           cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr -DANDROID_ABI=armeabi-v7a -DANDROID_PLATFORM=android-30 -DANDROID_STL=c++_shared -DANDROID_CPP_FEATURES="rtti exceptions" -DCMAKE_TOOLCHAIN_FILE=${ndk}/build/cmake/android.toolchain.cmake -DCMAKE_EXE_LINKER_FLAGS="-llog" ..          
           make -j4
           ctest -V
