--- a/.github/workflows/build-airmap.yml
+++ b/.github/workflows/build-airmap.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Set up Ubuntu environment
         run: |
           sudo tools/ubuntu/setup.dev.sh
-          sudo apt-get install -y qt5-default qtbase5-dev
-          #echo "Qt5_DIR=/usr/lib/x86_64-linux-gnu/cmake/Qt5" >> $GITHUB_ENV
-          #echo "CMAKE_PREFIX_PATH=/usr/lib/x86_64-linux-gnu/cmake/Qt5Core" >> $GITHUB_ENV
+          sudo apt-get install -y qt5-default qtbase5-dev lib64qt5help-devel
+          echo "Qt5_DIR=/usr/lib/x86_64-linux-gnu/cmake/Qt5" >> $GITHUB_ENV
+          echo "CMAKE_PREFIX_PATH=/usr/lib/x86_64-linux-gnu/cmake/Qt5Core" >> $GITHUB_ENV
           #sudo cp /usr/lib/x86_64-linux-gnu/libQt5Core.so* /usr/lib/x86_64-linux-gnu/cmake/Qt5/
           #sudo cp /usr/lib/x86_64-linux-gnu/cmake/Qt5Core/Qt5CoreConfig.cmake /usr/lib/x86_64-linux-gnu/cmake/Qt5/
       - name: Update git submodules
